test/corpus/code.txt
==================
Code blocks
==================
@code
  content
  here
@end

test

@code
  content
@end

@code
  content
@end

@code
  content
@end

@code js
  content
@end

@code
  content
@end
---
(document
    (code_block
      (code_block_start)
      (code_block_content)
      (code_block_end))
    (text_line)
    (code_block
      (code_block_start)
      (code_block_content)
      (code_block_end))
    (code_block
      (code_block_start)
      (code_block_content)
      (code_block_end))
    (code_block
      (code_block_start)
      (code_block_content)
      (code_block_end))
    (code_block
      (code_block_start
        (code_block_language))
      (code_block_content)
      (code_block_end))
    (code_block
      (code_block_start)
      (code_block_content)
      (code_block_end)))
