test/corpus/emphasis.txt
==================
Bold
==================
*bold*, *bold* and *bold*.
---
(document
  (text_line
    (bold (bold_start) (bold_content) (bold_end))
    (bold (bold_start) (bold_content) (bold_end))
    (bold (bold_start) (bold_content) (bold_end))
  )
)

==================
Italic
==================
/italic/, /italic/ and /italic/.
---
(document
  (text_line
    (italic (italic_start) (italic_content) (italic_end))
    (italic (italic_start) (italic_content) (italic_end))
    (italic (italic_start) (italic_content) (italic_end))
  )
)

==================
Underline
==================
_underline_, _underline_ and _underline_.
---
(document
  (text_line
    (underline (underline_start) (underline_content) (underline_end))
    (underline (underline_start) (underline_content) (underline_end))
    (underline (underline_start) (underline_content) (underline_end))
  )
)
