test/corpus/headings.txt
==================
Heading
==================
* Heading 1
  ** Heading 2
* Heading 1
  Plain text.
  ** Heading 2
    *** Heading 3
      Text.
---
(document
  (heading_1
    (heading_1_marker) (text_to_eol)
    (heading_2 (heading_2_marker) (text_to_eol)))

  (heading_1
    (heading_1_marker) (text_to_eol)
    (text_line)
    (heading_2
      (heading_2_marker) (text_to_eol)
      (heading_3
        (heading_3_marker) (text_to_eol)
        (text_line)
      ))
  )
)
