test/corpus/list.txt
==================
List items
==================
- List item
* Heading
  - List item
    Subtext
  - List item
  - Labeled - list item - https://url.com

---
(document
  (list_item (list_item_marker) (text_line))
  (heading_1
    (heading_1_marker) (text_to_eol)
    (list_item (list_item_marker) (text_line)
      (text_line))
    (list_item (list_item_marker) (text_line))
    (list_item (list_item_marker) (list_item_label) (external_link)))
)
