test/corpus/pipe.txt
==================
Pipe
==================
| Pipe
* Heading
  | Pipe
---
(document
  (pipe (pipe_marker) (text_to_eol))
  (heading_1
    (heading_1_marker) (text_to_eol)
    (pipe (pipe_marker) (text_to_eol)))
)
