test/corpus/tags.txt
==================
Tags
==================
+positive -negative @context #hash !danger $identifier
---
(document
  (text_line
    (tag_positive)
    (tag_negative)
    (tag_context)
    (tag_hash)
    (tag_danger)
    (tag_identifier)
  )
)
